--- a/src/components/friendlistbar/friendlistbar.css
+++ b/src/components/friendlistbar/friendlistbar.css
@@ -18,32 +18,33 @@
     margin: 0.5rem auto;
     height: 40rem;
     overflow-y: scroll;
-    ::-webkit-scrollbar {
+    &::-webkit-scrollbar {
         width: 10px;
         
       }
-      ::-webkit-scrollbar-track {
+      &::-webkit-scrollbar-track {
 
         background: radial-gradient(circle at 10% 20%, rgba(6, 0, 255, 0.61) 0%, rgb(191, 0, 255) 100.7%);
-        box-shadow: inset 0 0 5px grey;
+        box-shadow: inset 0 0 15px rgb(255, 255, 255);
         border-radius: 3rem;
         /* border-top-right-radius: 21rem; */
         /* height: 10px; */
         /* height: 1000px; */
         overflow: auto;
+        
 
       }
 
-      ::-webkit-scrollbar-thumb {
+      &::-webkit-scrollbar-thumb {
         /* background: #888; */
-        background: linear-gradient(109.6deg, rgb(33, 25, 180, 0.457) 11.2%, rgb(253, 29, 29, 0.457) 55.2%, rgb(252, 176, 69, 0.457) 91.1%);
+        background: linear-gradient(109.6deg, rgb(33, 25, 180, 0.757) 11.2%, rgb(253, 29, 29, 0.757) 55.2%, rgb(252, 176, 69, 0.757) 91.1%);
         border-radius: 3rem;
         
         
         
       }
 
-      ::-webkit-scrollbar-thumb:hover {
+      &::-webkit-scrollbar-thumb:hover {
         background: linear-gradient(109.6deg, rgb(33, 25, 180) 11.2%, rgb(253, 29, 29) 55.2%, rgb(252, 176, 69) 91.1%);
 
       }
