--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -7,6 +7,7 @@
     margin: 0rem 2.5rem;
     text-align: center  ;
     /* scroll-snap-align: center; */
+    /* position: fixed; */
     
     /* border: 1px solid rgb(255, 16, 16); */
 }
