--- a/src/components/feed/feed.css
+++ b/src/components/feed/feed.css
@@ -1,7 +1,40 @@
 .feed{
     flex: 5;
     height: calc(100vh - 6.3rem);
+    /* height: 100vh; */
     border-radius: 1.5rem;
     margin: 0rem 1rem;
+    width: 1vw;
     background: radial-gradient(circle at 10% 20%, rgb(222, 168, 248) 0%, rgb(168, 222, 248) 21.8%, rgb(189, 250, 205) 35.6%, rgb(243, 250, 189) 52.9%, rgb(250, 227, 189) 66.8%, rgb(248, 172, 172) 90%, rgb(254, 211, 252) 99.7%);
+    overflow-y: auto;
+    &::-webkit-scrollbar {
+        width: 8px;
+        
+      }
+      &::-webkit-scrollbar-track {
+
+        background: radial-gradient(circle at 10% 20%, rgba(6, 0, 255, 0.61) 0%, rgb(191, 0, 255) 100.7%);
+        box-shadow: inset 0 0 15px rgb(255, 255, 255);
+        border-radius: 3rem;
+        /* border-top-right-radius: 21rem; */
+        /* height: 10px; */
+        /* height: 1000px; */
+        overflow: auto;
+        
+
+      }
+
+      &::-webkit-scrollbar-thumb {
+        /* background: #888; */
+        background: linear-gradient(109.6deg, rgb(33, 25, 180, 0.757) 11.2%, rgb(253, 29, 29, 0.757) 55.2%, rgb(252, 176, 69, 0.757) 91.1%);
+        border-radius: 3rem;
+        
+        
+        
+      }
+
+      &::-webkit-scrollbar-thumb:hover {
+        background: linear-gradient(109.6deg, rgb(33, 25, 180) 11.2%, rgb(253, 29, 29) 55.2%, rgb(252, 176, 69) 91.1%);
+
+      }
 }
